--- a/src/components/servicesBlock/servicesBlockCathalogComponent.pug
+++ b/src/components/servicesBlock/servicesBlockCathalogComponent.pug
@@ -10,7 +10,7 @@ include ../spaceContainer.pug
             .content_container_servicesContainer_innerContainer_searchContainer_Title Показать найденные квартиры на карте
             .content_container_servicesContainer_innerContainer_searchContainer_Description Ищите новостройки рядом с работой,<br> парком или родственниками
             .content_container_servicesContainer_innerContainer_searchContainer_button
-                +stdBtn({text: 'Открыть карту', cls:'locBig', color: 'white', type: 'w7', gap: '5px', iconPlace: 'right', iconColor: 'yellow'})
+                +stdBtn({text: 'Открыть карту', cls:'locBig', color: 'white', type: 'w7', gap: '5px', iconPlace: 'right', iconColor: 'yellow', id: 'services_map_button'})
 
 
 
