--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -79,6 +79,7 @@
           align-items: flex-start;
           padding: 13px 20px;
           gap: 10px;
+          cursor: pointer;
             &.active {
                 color: $c664EF9;
                 background: #fff;
